VTK-2189 - Added encoding for url path and changed they way to get time from metadata to snapshot.